--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
+@font-face {
+  font-family: 'PatrickHandSC'; /*a name to be used later*/
+  src: url('../fonts/PatrickHandSC-Regular.ttf'); /*URL to font*/
+}
+
 body, html{
   height:100%;
   margin:0;
-  font-size:16px;
-  font-family:"Lato", sans-serif;
+  font-size:20px;
+  font-family: 'PatrickHandSC';
   font-weight:400;
   line-height:1.8em;
   color:#666;
   
-}
-@font-face {
-  font-family: 'PatrickHandSC'; /*a name to be used later*/
-  src: url('../fonts/PatrickHandSC-Regular.ttf'); /*URL to font*/
 }
 
 .title {
@@ -42,6 +43,33 @@ body, html{
   font-size:30px;
   letter-spacing:4px;
   text-transform:uppercase;
+}
+
+figure {
+  display: inline-block;
+  border: 1px dotted gray;
+  margin: 2px; /* adjust as needed */
+}
+figure img {
+  width: 300px;
+  vertical-align: top;
+}
+figure figcaption {
+  border: 1px dotted blue;
+  text-align: center;
+}
+
+
+.row {
+  padding-top: 10px;
+  text-align: center;
+}
+.column img{
+  min-width: 10%;
+  width: 20%;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #button1 {
