--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ figure figcaption {
   border-radius: 10rem;
   color: #fff;
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 15px;
   letter-spacing: 0.15rem;
   transition: all 0.3s;
   position: relative;
