--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,10 @@ h6 {
   font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+.page-section2 {
+  padding: 0px 0;
+}
+
 @media (min-width: 768px) {
   section {
     padding: 150px 0;
@@ -171,6 +175,7 @@ img::-moz-selection {
   }
 }
 
+
 header.masthead {
   text-align: center;
   color: black;
@@ -231,9 +236,8 @@ header.masthead .intro-text .intro-heading {
   }
 }
 
-.service-heading {
-  margin: 15px 0;
-  text-transform: none;
+.hoverer:hover img {
+  opacity: 0.7;
 }
 
 .team-member {
@@ -242,9 +246,10 @@ header.masthead .intro-text .intro-heading {
 }
 
 .team-member img {
+  object-fit: cover;
   width: 225px;
-  height: 225px;
-  border: 7px solid rgba(0, 0, 0, 0.1);
+  height: 255px;
+  border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 .team-member h4 {
@@ -259,7 +264,6 @@ header.masthead .intro-text .intro-heading {
 
 section#contact {
   background-color: #212529;
-  background-image: url("../img/header-bg.png");
   background-repeat: no-repeat;
   background-position: center;
 }
