--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,16 @@ header.masthead .intro-text .intro-heading {
   opacity: 0.7;
 }
 
+.hoverer2:hover img {
+  animation: bounce .8s ease;
+}
+
+.icon {
+  max-width: 120px;
+  min-width: 50px;
+  height: auto;
+}
+
 .team-member {
   margin-bottom: 50px;
   text-align: center;
