--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ header.masthead {
   text-align: center;
   color: black;
   background-image: url("../img/header.png");
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-attachment: fixed; /*parallax*/
   background-position: center center;
   background-size: cover;
