--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ header.masthead {
   color: black;
   background-image: url("../img/header.png");
   background-repeat: no-repeat;
-  background-attachment: center; /*parallax*/
+  background-attachment: fixed; /*parallax*/
   background-position: center center;
   background-size: cover;
 }
